--- a/src/backupgnucash/ChangeLog.txt
+++ b/src/backupgnucash/ChangeLog.txt
@@ -1,3 +1,9 @@
+V# 1.3.1 26 Feb 2019 Chris Good
+
+    * Linux Java 8 Help button causes hang: wrap the call to any AWT APIs
+      (Desktop.getDesktop().browse) in a runnable and submit it for execution
+      via java.awt.EventQueue.invokeLater().
+
 V# 1.3.0 24 Feb 2019 Chris Good
 
     * Mods for GnuCash V3.
